--- a/Partie Developpement/Festival de Cannes/nbproject/project.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Festival_de_Cannes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mariadb-java-client-1.5.5.jar=D:\\school\\IUT\\S3\\CPOA\\mariadb-java-client-1.5.5.jar
+file.reference.ojdbc14.jar=C:\\Users\\p1511158\\Downloads\\ojdbc14.jar
+file.reference.ojdbc5.jar=Z:\\CPOA\\ojdbc5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc14.jar}:\
+    ${file.reference.ojdbc5.jar}:\
+    ${file.reference.mariadb-java-client-1.5.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
