--- a/Partie Developpement/Festival de Cannes/nbproject/private/private.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.ojdbc14.jar=D:\\school\\IUT\\S3\\CPOA\\ojdbc14.jar
 user.properties.file=C:\\Users\\Johann\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
