3ème commit : résolutions de problèmes majeurs

--- a/Partie Developpement/Festival de Cannes/nbproject/private/private.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/private/private.properties
@@ -1,3 +1,5 @@
 compile.on.save=true
-file.reference.ojdbc14.jar=D:\\school\\IUT\\S3\\CPOA\\ojdbc14.jar
-user.properties.file=C:\\Users\\Johann\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mariadb-java-client-1.5.5.jar=C:\\Users\\Alexis\\Documents\\IUT_Info\\S3\\CPOA\\Festival-de-Cannes\\Ressources\\mariadb-java-client-1.5.5.jar
+file.reference.ojdbc14.jar=C:\\Users\\Alexis\\Documents\\IUT_Info\\S3\\CPOA\\Festival-de-Cannes\\Ressources\\ojdbc14.jar
+file.reference.ojdbc5.jar=C:\\Users\\Alexis\\Documents\\IUT_Info\\S3\\CPOA\\Festival-de-Cannes\\Ressources\\ojdbc5.jar
+user.properties.file=C:\\Users\\Alexis\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
