--- a/Partie Developpement/Festival de Cannes/nbproject/project.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=festival.de.cannes.FestivalDeCannes
+main.class=festival_de_cannes.FestivalDeCannes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
