Ajout de la fonctionnalité de suppression de projection

--- a/Partie Developpement/Festival de Cannes/nbproject/private/private.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/private/private.properties
@@ -1,5 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 file.reference.mariadb-java-client-1.5.5.jar=C:\\Users\\Alexis\\Documents\\IUT_Info\\S3\\CPOA\\Festival-de-Cannes\\Ressources\\mariadb-java-client-1.5.5.jar
 file.reference.ojdbc14.jar=C:\\Users\\Alexis\\Documents\\IUT_Info\\S3\\CPOA\\Festival-de-Cannes\\Ressources\\ojdbc14.jar
 file.reference.ojdbc5.jar=C:\\Users\\Alexis\\Documents\\IUT_Info\\S3\\CPOA\\Festival-de-Cannes\\Ressources\\ojdbc5.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Alexis\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
