--- a/Partie Developpement/Festival de Cannes/nbproject/project.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Festival de Cannes
+application.vendor=Alexis
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Festival_de_Cannes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-1.5.5.jar=D:\\school\\IUT\\S3\\CPOA\\mariadb-java-client-1.5.5.jar
 file.reference.ojdbc14.jar=C:\\Users\\p1511158\\Downloads\\ojdbc14.jar
@@ -60,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=festival_de_cannes.view.FestivalDeCannes
+main.class=festival_de_cannes.view.Page_Principale
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
