--- a/Partie Developpement/Festival de Cannes/nbproject/project.properties
+++ b/Partie Developpement/Festival de Cannes/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=festival_de_cannes.view.Page_Principale
+main.class=festival_de_cannes.controller.controleur
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
